src/k8s/base/deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: oh-deployment
spec:
  replicas: 0
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      app: oh-web-app
  template:
    spec:
      imagePullSecrets:
        - name: oh-secret
      containers:
        - name: oh-web-app
          image: "gcr.io/four-track-friday-2/oh_web_app"
          imagePullPolicy: IfNotPresent
          ports:
            - name: health-port
              containerPort: 8080
          readinessProbe:
            httpGet:
              port: health-port
              path: /health
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 6
            successThreshold: 1
          livenessProbe:
            httpGet:
              port: health-port
              path: /health
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 6
            successThreshold: 1
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 1m
              memory: 64Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
