src/k8s/base/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: oh-ingress
spec:
  backend:
    serviceName: oh-service
    servicePort: 8080
